# stance_vector

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  stance_extraction.py
.github/workflows/: main.yml
src/stance/: __init__.py
src/stance_vector/: __init__.py  action_based_stance.py  score_based_stance.py  stance_extraction.py
tests/: test.py  test_action_based_stance.py  test_score_based_stance.py  test_stance_extraction.py
