[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.codespell]
ignore-regex = "\\[nt]" # Do not count escaped newlines or tabs as part of a word
ignore-words-list = "hel,vie"  # "HEL" and "VIE" are from DAIDE
quiet-level = 0 # Display all warnings
check-filenames = ""
check-hidden = ""

[tool.isort]
py_version = "37"
line_length = 100
atomic = true
combine_as_imports = true
force_sort_within_sections = true
profile = "black"

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
python_version = "3.7"
strict = true
warn_unreachable = true
