[metadata]
name = stance_vector
version = 0.0.1
description = Stance Vector Computation for Diplomacy Board Game
long_description = file: README.md
long_description_content_type = text/markdown
url = NO
author = Kartik Shenoy
author_email = kartik.shenoyy@gmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    diplomacy
    numpy
python_requires = >=3.6

[options.packages.find]
where = src
